--- a/Team-G_BackPropagation/Team-G_BackPropagation/TeamG_BackPropagation.csproj
+++ b/Team-G_BackPropagation/Team-G_BackPropagation/TeamG_BackPropagation.csproj
@@ -58,6 +58,7 @@
     <Compile Include="OuputN.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quantify.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
